--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ font-family: "Roboto Condensed", sans-serif;
   --primary-color: #4792a5;
   --light-color: #efefef;
   --dark-color: #3c3c3c;
+  --general-transition: all 0.4s ease;
 }
 
 html {
@@ -61,7 +62,6 @@ button {
 a {
   text-decoration: none;
   font-family: var(--secondary-font);
-  color: var();
 }
 
 img {
@@ -78,4 +78,172 @@ ul {
   width: 100%;
   max-width: 114rem; /* 1140 pixel, bootsrapin container boyutu, onlar yeterince biliyorlardır diye boyle yazdik */
   margin: 0 auto;
+}
+
+/*? HERO SECTION */
+
+#hero {
+  /* # simgesi ile makyajlamak istediğimiz component'in id sini secebiliyoruz */
+  width: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../img/main_bg.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+}
+
+.hero-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-transform: uppercase;
+  text-align: center;
+  width: 90%;
+}
+
+.main-title {
+  font-family: var(--primary-font);
+  font-size: 8rem; /* 80px */
+  font-weight: 100; /* font kalinligi */
+  letter-spacing: 2rem; /* harfler arasi bosluk */
+  padding-bottom: 2rem;
+}
+
+.main-slogan {
+  font-size: 1.6rem;
+  color: var(--light-color);
+  letter-spacing: 2.4rem;
+  padding-bottom: 2rem;
+}
+
+.arrows {
+  margin-left: 50%;
+  padding-top: 4rem;
+}
+
+.arrows span {
+  /* arrows class'inin icindeki span tagini makyajliyoruz */
+  display: block;
+  width: 2rem;
+  height: 2rem;
+  border-bottom: 1px solid var(--primary-color);
+  border-right: 1px solid var(--primary-color);
+  transform: rotate(45deg);
+  margin: -1rem;
+  animation: arrows-animate 2s infinite;
+}
+
+.arrows span:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.arrows span:nth-child(3) {
+  animation-delay: -0.6s;
+}
+
+@keyframes arrows-animate {
+  0% {
+    opacity: 0;
+    transform: rotate(45deg) translate(-2rem, -2rem);
+  }
+
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(45deg) translate(2rem, 2rem);
+  }
+}
+
+/*? NAVIGATION MENU */
+.nav {
+  background-color: rgba(71, 146, 165, 0.9);
+  position: fixed;
+  top: 0%;
+  width: 100%;
+  z-index: 99;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 8rem;
+}
+
+.nav-list {
+  display: flex;
+}
+
+.nav-list li:last-child {
+  padding-right: 0;
+}
+
+.nav-item {
+  padding: 0 2rem;
+}
+
+.nav-link {
+  font-size: 1.6rem;
+  letter-spacing: 2px;
+  color: var(--light-color);
+  font-weight: 700;
+  transition: var(--general-transition);
+}
+
+.nav-link:hover {
+  color: var(--dark-color);
+}
+
+.nav-link::after {
+  content: "";
+  display: block;
+  height: 0.2rem;
+  width: 0;
+  opacity: 0;
+  background-color: var(--dark-color);
+  transition: var(--general-transition);
+}
+
+.nav-link:hover::after {
+  width: 100%;
+  opacity: 1;
+}
+
+/*? LOGO */
+
+.logo {
+  font-size: 4rem;
+  width: 7rem;
+  height: 7rem;
+  background-color: var(--light-color);
+  text-align: center;
+  line-height: 7rem;
+  border-radius: 50%;
+  color: var(--primary-color);
+}
+
+.logo:hover {
+  /* .logo :hover yazarsan calismaz, arada bosluk olmayacak */
+  background-color: var(--dark-color);
+  color: var(--light-color);
+  transition: var(--general-transition);
+}
+
+.navbar-toggler {
+  font-size: 2.2rem;
+  position: absolute;
+  right: 2.5rem;
+  z-index: 100;
+  display: none;
+}
+
+.navbar-toggler .line {
+  width: 2.5rem;
+  height: 0.4rem;
+  background-color: var(--dark-color);
+  margin: 0.7rem;
+  transition: var(--general-transition);
 }
