--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ font-family: "Roboto Condensed", sans-serif;
   --light-color: #efefef;
   --dark-color: #3c3c3c;
   --general-transition: all 0.4s ease;
+  --pad-right: 4rem;
+  --pad-left: 4rem;
 }
 
 html {
@@ -29,6 +31,7 @@ html {
   color: var(--dark-color);
   font-family: var(--primary-font);
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 section {
@@ -339,6 +342,15 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+
+#services-slider {
+  display: flex;
+  overflow: hidden;
+}
+
+.services-slide {
+  min-width: 100%;
 }
 
 .btn-arrows {
@@ -768,4 +780,172 @@ ul.social-list li:nth-child(4) a:hover {
   border-color: transparent;
   color: var(--primary-color);
   background-color: var(--light-color);
+}
+
+/** MEDIA QUERIES */
+
+@media only screen and (max-width: 992px) {
+  /* Son kullanıcının ekranına göre sayfanın vereceği cevabı değiştiriyoruz. Burada diyoruz ki eğer son kullanıcının ekran genişliği 992px den küçükse, bu aşağıdaki kodları yaz diyoruz. Only ise yanlız bu media queryleri destekleyen browserlar için yap diyoruz */
+  .navbar-toggler {
+    display: block;
+    cursor: pointer;
+  }
+  .nav-list {
+    display: block;
+    position: absolute; /* koordinat vereceğimiz için... */
+    top: 8rem;
+    left: 0;
+    background-color: var(--primary-color);
+    width: 50%;
+    height: 100vh;
+    opacity: 0.9;
+    transition: var(--general-transition);
+    transform: translateX(-100%); /*ilk durumda görünmemesi icin*/
+  }
+
+  li.nav-item {
+    padding: 2rem;
+  }
+
+  .navbar {
+    justify-content: space-around;
+  }
+  a.nav-link:hover::after {
+    /* alt çizgiler after ile geliyor */
+    width: 50%;
+  }
+
+  .main-title {
+    font-size: 7rem;
+  }
+
+  .main-slogan {
+    font-size: 1.4rem;
+    letter-spacing: 1.4rem;
+  }
+
+  .vertical-title {
+    display: none;
+  }
+
+  .horizontal-title {
+    font-size: 3rem;
+  }
+
+  p {
+    font-size: 1.3rem;
+    line-height: 2.2rem;
+  }
+
+  .about-content {
+    padding-right: var(--pad-right);
+  }
+
+  .services-content {
+    padding-left: var(--pad-left);
+  }
+
+  .team-content {
+    padding-right: var(--pad-right);
+  }
+
+  .blog-content {
+    padding-left: var(--pad-left);
+  }
+  .copy-right {
+    padding-left: var(--pad-left);
+  }
+
+  .back-top {
+    padding-right: var(--pad-right);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .main-title {
+    color: red;
+    font-size: 6rem;
+  }
+
+  .main-slogan {
+    font-size: 1.2rem;
+    letter-spacing: 1.2rem;
+  }
+
+  .sec-grid {
+    grid-template-columns: 1fr;
+  }
+  .about-image {
+    padding-left: var(--pad-left);
+  }
+
+  .services-image {
+    padding-right: var(--pad-right);
+  }
+
+  .portfolio-items {
+    grid-template-areas:
+      "item-1 item-1 item-3 item-3"
+      "item-1 item-1 item-2 item-2"
+      "item-7 item-7 item-4 item-4"
+      "item-6 item-6 item-4 item-4"
+      "item-5 item-5 item-8 item-8";
+  }
+  .portfolio-item-4 {
+    min-height: 50rem;
+  }
+  .portfolio-item-6 {
+    min-height: 25rem;
+  }
+  .team-items {
+    padding-left: var(--pad-left);
+  }
+
+  .latest-posts {
+    padding-right: var(--pad-right);
+  }
+
+  .contact-content {
+    padding-left: var(--pad-left);
+    padding-right: var(--pad-right);
+  }
+
+  .contact-content h2 {
+    font-size: 3.5rem;
+  }
+
+  .footer-content {
+    grid-template-columns: 1fr;
+  }
+
+  .copy-right,
+  .back-top,
+  .social-media {
+    justify-self: center;
+    margin: 0.5rem 0;
+  }
+
+  .social-media h4 {
+    display: none;
+  }
+
+  .back-top {
+    padding-right: 0;
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 8px);
+}
+
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -8px);
 }
